--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Lab2 main.cpp)
+add_executable(Lab2 main.cpp correct_input.cpp Vector.cpp Note.cpp Note.hpp)
