Lab completed: Added Exceptions Edited Container, Vector, Note Created Processor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Lab2 main.cpp correct_input.cpp Vector.cpp Note.cpp Note.hpp Container.cpp Container.hpp Exceptions.hpp)
+add_executable(Lab2 main.cpp correct_input.cpp Vector.cpp Note.cpp Note.hpp Container.cpp Container.hpp Exceptions.hpp Processor.cpp Processor.hpp)
